# AIMew

./: CMakeLists.txt  README.md  aimanager.cpp  aimanager.h  chatroom.cpp  chatroom.h  functionmenu.cpp  functionmenu.h  image.qrc  main.cpp  musicplayer.cpp  musicplayer.h
